# trading-ideas

./: .gitignore  Backtesting and Optimization of an ETF Momentum Strategy.ipynb  ETH-USD.csv  Makefile  README.md  Statistical Arbitrage on Sector ETFs.ipynb  Trading Idea.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
analytics/: __init__.py  performance.py
backtest/: simple.py
data/: sp500.py
engines/: factor_engine.py
engines/sp500-factor/: README.md  factor_investing_backtesting_momentum_only.py
factors/: __init__.py  core.py  momentum.py  quality.py  size.py  value.py  volatility.py
indicators/: __init__.py  indicator.py
scripts/: debug_etf_perf.py  demo_backtest.py  demo_etf_momentum.py  demo_factor_model.py  demo_momentum.py  demo_statarb.py
src/analytics/: performance.py
src/backtest/: __init__.py  simple.py
src/data/: __init__.py
src/engines/: __init__.py  factor_engine.py
src/factors/: __init__.py
src/strategies/: momentum.py  sector_statarb.py
strategies/: README.md  __init__.py  _utils.py  etf_momentum.py  sector_statarb.py  statarb.py
tests/: conftest.py  test_backtest.py  test_factors.py  test_indicators.py  test_momentum.py  test_momentum_engine.py  test_new_factors.py  test_statarb.py  test_transaction_costs.py  test_utils.py
utils/: __init__.py  grid.py  stats.py
