[project]
name = "trading-ideas"
version = "0.1.0"
description = "Unified collection of trading indicator and backtesting utilities."
authors = [{name = "Ian Lee"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = ["pandas>=2.1.2", "numpy>=1.26.1", "matplotlib>=3.8.1"]

[project.optional-dependencies]
dev = ["pytest>=7.4.2"]
web = ["yfinance>=0.2.40","beautifulsoup4","lxml","requests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
